--- a/fansite.css
+++ b/fansite.css
@@ -53,8 +53,8 @@ nav {
   transition: 0.7s;
 }
 
-#hamburger:checked ~ #hamburger-logo,
-#hamburger:checked ~ nav {
+#hamburger:checked~#hamburger-logo,
+#hamburger:checked~nav {
   transform: translate(0px);
 }
 
@@ -91,15 +91,28 @@ body .bcg-image main p {
   justify-self: center;
 }
 
-body .bcg-image footer {
+body .bcg-image footer section {
   display: flex;
   justify-content: space-around;
-  margin-top: 20px;
+  margin: 3%;
+}
+
+body .bcg-image footer h4 {
+  text-align: center;
 }
 
 body .bcg-image footer a {
   text-decoration: none;
   color: white;
+}
+
+body .bcg-image footer .contact {
+  display: block;
+}
+
+body .bcg-image footer .contact form .contact-nom {
+  display: flex;
+  justify-content: space-around;
 }
 
 @media screen and (min-width: 620px) and (max-width: 1200px) {
@@ -225,6 +238,30 @@ body .bcg-image main .petit-ecran p {
   padding: 25px;
 }
 
+body .bcg-image footer section {
+  display: flex;
+  justify-content: space-around;
+  margin: 3%;
+}
+
+body .bcg-image footer h4 {
+  text-align: center;
+}
+
+body .bcg-image footer a {
+  text-decoration: none;
+  color: white;
+}
+
+body .bcg-image footer .contact {
+  display: block;
+}
+
+body .bcg-image footer .contact form .contact-nom {
+  display: flex;
+  justify-content: space-around;
+}
+
 @media screen and (min-width: 620px) {
   body .bcg-image header .burger-menu {
     width: 100%;
@@ -247,6 +284,7 @@ body .bcg-image main .petit-ecran p {
     color: red;
     font-size: 35px;
   }
+
   body .bcg-image main .petit-ecran {
     display: none;
   }
@@ -255,6 +293,7 @@ body .bcg-image main .petit-ecran p {
     display: block;
     margin: 3%;
   }
+
   body .bcg-image main .grand-ecran .grand {
     display: flex;
     justify-content: space-between;
@@ -286,6 +325,7 @@ body .bcg-image main .petit-ecran p {
       "bottom1 up1 bottom2"
       "empty1 bottom3 empty2";
   }
+
   body .bcg-image main .grand-ecran .triangle .bottom1 {
     grid-area: bottom1;
     width: 100%;
@@ -310,6 +350,7 @@ body .bcg-image main .petit-ecran p {
     justify-self: flex-end;
     align-self: flex-end;
   }
+
   body .bcg-image main .grand-ecran .up1 img {
     width: 100%;
     height: 100%;
@@ -376,78 +417,435 @@ body .bcg-image main .petit-ecran p {
     width: 100%;
     height: 100%;
   }
-  body .bcg-image main .grand-ecran .triangle:hover ~ .full-triangle {
+
+  body .bcg-image main .grand-ecran .triangle:hover~.full-triangle {
     opacity: 1;
     visibility: visible;
     transition: opacity 1s ease-in-out, visibility 0.3s ease-in-out;
   }
 }
 
-/* Mise en page CSS pour yugi.html. */
+/* Mise en page CSS pour ennemi.html. */
 body {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  font-family: 'Montserrat', sans-serif;
   overflow: auto;
 }
 
-body .yugi {
+body .ennemi-fond header .burger-menu {
+  position: fixed;
+  width: 0px;
+}
+
+#hamburger {
+  display: none;
+}
+
+#hamburger-logo {
+  cursor: pointer;
+  background: black;
+  width: 130px;
+  display: block;
+  color: white;
+  text-align: right;
+  transform: translateX(-100px);
+  padding: 10px;
+}
+
+body .ennemi-fond header .burger-menu nav {
+  background: black;
+  overflow: hidden;
+  width: 80px;
+  transform: translateX(-80px);
+}
+
+#hamburger-logo,
+nav {
+  transition: 0.7s;
+}
+
+#hamburger:checked~#hamburger-logo,
+#hamburger:checked~nav {
+  transform: translate(0px);
+}
+
+body .ennemi-fond header .burger-menu nav a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+}
+
+body .ennemi-fond header .burger-menu nav a:hover {
+  background: #444;
+}
+
+body .ennemi-fond {
+  background-image: url(./images/ennemi-fond.avif);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+body .ennemi-fond main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10%;
+  color: white;
+  text-align: center;
+}
+
+body .ennemi-fond main .big {
+  display: none;
+}
+
+body .ennemi-fond main .little h1 {
+  text-transform: uppercase;
+  font-weight: bold;
+  -webkit-text-stroke: 2px black;
+  /* Pour Chrome et Safari */
+  background: linear-gradient(to right, #ff7e5f, #feb47b);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-size: 5.2em;
+  font-family: 'Anton' sans-serif;
+  padding: 3%;
+}
+
+body .ennemi-fond main .little h2 {
+  font-size: 2.8em;
+  background: linear-gradient(to right, #3498db, #5dade2);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-family: 'Anton' sans-serif;
+  padding: 3%;
+}
+
+body .ennemi-fond main .little h3 {
+  font-size: 1.5em;
+  background: linear-gradient(to right, #2ecc71, #58d68d);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-family: 'Anton' sans-serif;
+  padding: 3%;
+}
+
+body .ennemi-fond main .little p {
+  font-size: 0.8em;
+  padding: 3%;
+}
+
+body .ennemi-fond main .little img {
+  width: 45%;
+}
+
+
+body .ennemi-fond main .little section .yugi {
   width: 80%;
   clip-path: polygon(50% 0%, 0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%);
+  margin: 10% auto;
 }
 
-body .yugi img {
+body .ennemi-fond main .little section .yugi img {
   width: 100%;
   height: 100%;
 }
 
-body .pegasus {
+body .ennemi-fond main .little section .pegasus {
   width: 80%;
-  clip-path: polygon(
-    50% 0%,
-    69% 25%,
-    98% 35%,
-    81% 64%,
-    83% 100%,
-    50% 84%,
-    15% 100%,
-    20% 61%,
-    2% 35%,
-    29% 25%
-  );
+  clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 50% 100%, 0% 25%);
+  margin: 10% auto;
 }
 
-body .pegasus img {
+body .ennemi-fond main .little section .pegasus img {
   width: 100%;
   height: 100%;
 }
-body .dartz {
+
+body .ennemi-fond main .little section .dartz {
   width: 80%;
-  clip-path: polygon(
-    50% 0%,
-    89% 8%,
-    100% 33%,
-    100% 70%,
-    89% 94%,
-    50% 100%,
-    33% 77%,
-    0 87%,
-    0 17%,
-    29% 23%
-  );
+  clip-path: polygon(50% 0%,
+      69% 25%,
+      98% 35%,
+      81% 64%,
+      83% 100%,
+      50% 84%,
+      15% 100%,
+      20% 61%,
+      2% 35%,
+      29% 25%);
+  margin: 10% auto;
 }
-body .dartz img {
+
+body .ennemi-fond main .little section .dartz img {
   width: 100%;
   height: 100%;
 }
 
-body .noah {
+body .ennemi-fond main .little section .noah {
   width: 80%;
   clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  margin: 10% auto;
 }
 
-body .noah img {
+body .ennemi-fond main .little section .noah img {
   width: 100%;
   height: 100%;
+}
+
+body .ennemi-fond footer {
+  padding-bottom: 3%;
+}
+
+body .ennemi-fond footer section {
+  display: flex;
+  justify-content: space-around;
+  margin: 3%;
+}
+
+body .ennemi-fond footer h4 {
+  text-align: center;
+  font-size: 2em;
+}
+
+body .ennemi-fond footer a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.4em;
+}
+
+body .ennemi-fond footer .contact {
+  display: block;
+}
+
+body .ennemi-fond footer .contact form {
+  font-size: 1.4em;
+}
+
+body .ennemi-fond footer .contact form .contact-nom {
+  display: flex;
+  justify-content: space-around;
+}
+
+@media screen and (min-width: 950px) {
+
+  body .ennemi-fond {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+  }
+
+  body .ennemi-fond header {
+    height: 10%;
+  }
+
+  body .ennemi-fond header .burger-menu {
+    width: 100%;
+    position: relative;
+  }
+
+  #hamburger-logo {
+    display: none;
+  }
+
+  body .ennemi-fond header .burger-menu nav {
+    background: none;
+    width: 100%;
+    transform: translateX(0);
+    display: flex;
+    justify-content: space-around;
+  }
+
+  body .ennemi-fond header .burger-menu nav a {
+    color: red;
+    font-size: 35px;
+  }
+
+  body .ennemi-fond main .little {
+    display: none;
+  }
+
+  body .ennemi-fond main {
+    margin: 0%;
+    padding: 0%;
+    width: 100%;
+    height: 460%;
+  }
+
+  body .ennemi-fond main .big {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 0.2fr 0.2fr 1fr 1fr;
+    margin: 5% 0%;
+    width: 100%;
+    height: 100%;
+  }
+
+
+  body .ennemi-fond main .big .yugi-big {
+    clip-path: polygon(0% 0%, 8% 10%, 7% 20%, 18% 30%, 17% 40%, 28% 50%, 27% 60%, 38% 70%, 37% 80%, 48% 90%, 50% 100%, 0% 100%);
+    width: 200%;
+    height: 200%;
+    background-image: url(./images/ennemi-fond4.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  body .ennemi-fond main .big .yugi-big h2 {
+    width: 40%;
+    text-transform: uppercase;
+    font-weight: bold;
+    -webkit-text-stroke: 2px black;
+    background: linear-gradient(to right, #ff7e5f, #feb47b);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    font-size: 3.2em;
+    font-family: 'Anton' sans-serif;
+    padding: 1%;
+  }
+
+  body .ennemi-fond main .big .yugi-big p {
+    width: 40%;
+    margin-left: 2%;
+    font-size: 2.3em;
+  }
+
+  body .ennemi-fond main .big .yugi-big img {
+    width: 35%;
+    margin: 0% 0% 2% 4%;
+  }
+
+  body .ennemi-fond main .big .pegasus-big {
+    clip-path: polygon(0% 0%, 8% 10%, 7% 20%, 18% 30%, 17% 40%, 28% 50%, 27% 60%, 38% 70%, 37% 80%, 48% 90%, 50% 100%, 51% 90%, 47% 80%, 53% 70%, 47% 60%, 53% 50%, 47% 40%, 53% 30%, 47% 20%, 53% 10%, 50% 0%);
+    width: 200%;
+    height: 200%;
+    background-image: url(./images/ennemi-fond2.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+  }
+
+  body .ennemi-fond main .big .pegasus-big h2 {
+    width: 50%;
+    text-transform: uppercase;
+    font-weight: bold;
+    -webkit-text-stroke: 2px black;
+    background: linear-gradient(to right, #ff7e5f, #feb47b);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    font-size: 3.2em;
+    font-family: 'Anton' sans-serif;
+    padding: 1%;
+    margin-left: 2%;
+  }
+
+  body .ennemi-fond main .big .pegasus-big p {
+    width: 40%;
+    margin-left: 8%;
+    font-size: 2.3em;
+  }
+
+  body .ennemi-fond main .big .pegasus-big img {
+    width: 50%;
+    margin: 2% 0% 0% 4%;
+  }
+
+  body .ennemi-fond main .big .dartz-big {
+    clip-path: polygon(50% 100%, 51% 90%, 47% 80%, 53% 70%, 47% 60%, 53% 50%, 47% 40%, 53% 30%, 47% 20%, 53% 10%, 50% 0%, 100% 0%, 92% 10%, 93% 20%, 82% 30%, 83% 40%, 72% 50%, 73% 60%, 62% 70%, 63% 80%, 54% 90%);
+    width: 200%;
+    height: 200%;
+    background-image: url(./images/ennemi-fond1.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+  }
+
+  body .ennemi-fond main .big .dartz-big h2 {
+    width: 50%;
+    text-transform: uppercase;
+    font-weight: bold;
+    -webkit-text-stroke: 2px black;
+    background: linear-gradient(to right, #ff7e5f, #feb47b);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    font-size: 3.2em;
+    font-family: 'Anton' sans-serif;
+    padding: 1%;
+  }
+
+  body .ennemi-fond main .big .dartz-big p {
+    width: 40%;
+    margin-right: 8%;
+    font-size: 2.3em;
+  }
+
+  body .ennemi-fond main .big .dartz-big img {
+    width: 50%;
+    margin: 2% 4% 0% 0%;
+  }
+
+  body .ennemi-fond main .big .noah-big {
+    clip-path: polygon(100% 0%, 92% 10%, 93% 20%, 82% 30%, 83% 40%, 72% 50%, 73% 60%, 62% 70%, 63% 80%, 54% 90%, 50% 100%, 100% 100%);
+    width: 200%;
+    height: 200%;
+    transform: translate3d(-50%, -50%, 0);
+    background-image: url(./images/ennemi-fond3.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: end;
+    justify-content: end;
+  }
+
+  body .ennemi-fond main .big .noah-big h2 {
+    width: 40%;
+    text-transform: uppercase;
+    font-weight: bold;
+    -webkit-text-stroke: 2px black;
+    background: linear-gradient(to right, #ff7e5f, #feb47b);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    font-size: 3.2em;
+    font-family: 'Anton' sans-serif;
+    padding: 1%;
+  }
+
+  body .ennemi-fond main .big .noah-big p {
+    width: 40%;
+    margin-right: 2%;
+    font-size: 2.3em;
+  }
+
+  body .ennemi-fond main .big .noah-big img {
+    width: 35%;
+    margin: 0% 4% 2% 0%;
+  }
+
+  body .ennemi-fond footer h4 {
+    font-size: 2.9em;
+  }
+
+  body .ennemi-fond footer a {
+    font-size: 2.2em;
+    color: red;
+  }
+
+  body .ennemi-fond footer .contact form {
+    font-size: 2.2em;
+    color: red;
+  }
 }
