--- a/fansite.css
+++ b/fansite.css
@@ -91,10 +91,14 @@ body .bcg-image main p {
   justify-self: center;
 }
 
+body .bcg-image footer {
+  font-size: 1em;
+}
+
 body .bcg-image footer section {
   display: flex;
   justify-content: space-around;
-  margin: 3%;
+  /* margin: 3%; */
 }
 
 body .bcg-image footer h4 {
@@ -141,6 +145,10 @@ body .bcg-image footer .contact form .contact-nom {
   body .bcg-image footer a {
     text-decoration: none;
     color: black;
+  }
+
+  body .bcg-image footer {
+    font-size: 1em;
   }
 
   body .bcg-image footer a {
@@ -671,13 +679,13 @@ body .ennemi-fond footer .contact form .contact-nom {
     margin: 0%;
     padding: 0%;
     width: 100%;
-    height: 460%;
+    height: 500%;
   }
 
   body .ennemi-fond main .big {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 0.2fr 0.2fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     margin: 5% 0%;
     width: 100%;
     height: 100%;
